Fix for sylva reagrdinf security loopholes

--- a/charts/kubevirt/0.1.0/templates/kubevirt-cr-uninstall.yaml
+++ b/charts/kubevirt/0.1.0/templates/kubevirt-cr-uninstall.yaml
@@ -67,3 +67,11 @@ spec:
             - >
               kubectl delete kubevirt kubevirt;
               sleep 45; # wait for the operator to clean up
+          securityContext:
+            seccompProfile:
+              type: RuntimeDefault
+            runAsNonRoot: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+              - ALL
