--- a/charts/kubevirt/0.1.0/templates/kubevirt-crd-uninstall.yaml
+++ b/charts/kubevirt/0.1.0/templates/kubevirt-crd-uninstall.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  namespace: default
+  namespace: kubevirt
   name: kubevirt-crd-uninstaller
   annotations:
     "helm.sh/hook": post-delete
@@ -33,7 +33,7 @@ metadata:
     "helm.sh/hook-weight": "2"
 subjects:
   - kind: ServiceAccount
-    namespace: default
+    namespace: kubevirt
     name: kubevirt-crd-uninstaller
 roleRef:
   kind: ClusterRole
@@ -43,7 +43,7 @@ roleRef:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  namespace: default
+  namespace: kubevirt
   name: kubevirt-crd-uninstaller
   annotations:
     "helm.sh/hook": post-delete
@@ -64,3 +64,11 @@ spec:
             - -c
             - >
               kubectl delete customresourcedefinitions kubevirts.kubevirt.io;
+          securityContext:
+            seccompProfile:
+              type: RuntimeDefault
+            runAsNonRoot: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+              - ALL
